--- a/Assignment.html
+++ b/Assignment.html
@@ -52,7 +52,7 @@
                     <li>Hostels</li>
                     <li>Restaurants</li></ol>
             </p>
-            <p><h1>Enquery Form :</h1>
+            <p><h1>Enquiry Form :</h1>
                 <label for="Name">Name</label>
                 <input type="text" placeholder="Enter your Name" id="Name"><br><br>
                 <label for="District">District</label>
