Update and rename Assignment.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html charset=UTF-8>
-<html lang="en">
-
+<meta charset=UTF-8>
+<meta lang="en">
+<title>Chitkara University</title>
     <style>
         body{margin-left: 6cm;width: 15cm;}
         table{width: 5cm;}
         input{color: blue;}
     </style>
-
+<!-- Made by Jaivardhan Khanna -->
     <h1 style="color: grey;text-align: center;"><b>Chitkara University</b></h1>
 
     <body><p>30 kms from Chandigarh, Chitkara University offers a
